# maintain_standards

./: .gitignore  Dockerfile  README.md  entrypoint.sh  file_operations.py  generate_library.py  models.py  pyproject.toml  requirements.txt  standards_editor.py  validator.py
,vscode/: settings.json
backend/: app.py  file_operations.py  index.html  library_controller.py  users.json
docs/: EE Moral Standards v2.7.md
frontend/: app.js  index.html  styles.css
standards_library/: library.json
standards_library/backups/: library_backup_20251021_222906.json  library_backup_20251025_162423.json  library_backup_20251104_183741.json  library_backup_20251120_124318.json  library_backup_20251120_165536.json  library_backup_20251121_194534.json
standards_library/exports/: export.json  library_export.json
tests/: test_example.py
