[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maintain_standards"
version = "0.0.1"
description = "The maintenance app allows for editing, organizing and maintaining the standards and clusters of standards used by the EE system."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/farhawk3/maintain_standards"
Issues = "https://github.com/farhawk3/maintain_standards/issues"